# lhbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .tool-versions  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  bot.py  codecov.yml  config.py  docker-compose.yaml  docker-compose.yml  example.config.json  example.env  pyproject.toml  railway.json  release.py  requirements.txt  run.sh  setup.sh
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  release.yaml  terraform.yaml  terraform_apply.yaml  terraform_checks.yaml  test.yaml
.zed/: settings.json
bot/: bot.py  config.py
bot/cogs/: build_a_team.py  fun.py  general.py  gifsearch.py  help.py  info.py  lhcloudy.py  lhguess.py  management.py  mod.py  onevone.py  open_ai.py  overwatch.py  search.py  snail_race.py  web_server.py
bot/cogs/static/: index.html
bot/database/: db.py
bot/utils/: banwords.py  bot_utils.py  checks.py  clear_dir.py  emojis.py  generate_csv.py  generate_pdf.py  generatevs.py  gpt.py  reinquotes.py  return_helper.py  s3_client.py  s3_upload.py  uploader.py
cogs/: fun.py  general.py  help.py  lhcloudy.py  lhguess.py  lhints.py  overwatch.py
cogs/utils/: hints.py  uploader.py
database/: db.py
database/utils/: return_helper.py
example-files/: example.env  terraform.tfvars.example
infrastructure/terraform/: .terraform.lock.hcl  main.tf  mongodb.tf  outputs.tf  s3.tf  sentry.tf  shared-envs.tf  variables.tf  versions.tf
utils/: banwords.py  clear_dir.py  emojis.py  generate_pdf.py  hints.py  return_helper.py  uploader.py
(+31 files in other folders)
