[tool.poetry]
name = "lhbot"
version = "0.1.0"
description = "A Discord bot for LhCloudys Discord Server"
authors = ["Alex Raskin alexgithub@fastmail.fm"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
py-cord = "^1.7.3"
motor = "^2.5.1"
dnspython = "^2.2.0"
fpdf = "^1.7.2"
filestack-python = "^3.5.0"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
sentry-sdk = "^1.5.4"
pytest-cov = "^3.0.0"
pytest = "^7.0.0"
discordhealthcheck = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
